lab1/Test/L1-A-6-23.output
Error Type B at Line 4
Error Type B at Line 6
Error Type A at Line 8
Error Type B at Line 9
Error Type A at Line 11
Error Type B at Line 12
Error Type A at Line 13
Error Type B at Line 13
Error Type B at Line 13
Error Type B at Line 14
Error Type A at Line 14
Error Type B at Line 22
Error Type A at Line 22
