lab1/Test/L1-A-6-23.cmm
struct {
  struct Gx70GwcpOaytQNSMlFB {
  }Z8LX_Ikpk4yg1 [ 278635940 ] [ 1437688430 ] [ 1903953204 
    ] [ 426094580 ] [ 1872518016 ] [ ] [ 128282815 ] , 
    D9z ;
  float , inRe_XH2BNyzM ;
}V9FzYM4UqPmU ( struct bczpP0Dw2NiFfRi {
}zu3aAYhG8RXD `) {
  if ( tGZjb0jNhnNEpTc )   rcgL8fNtZdaWqIi6jfl return 
    ;
@
  if ( float _9pJwQM9rCoxq1Fcc )   if ( jBg6do69ewV 
    ) ^  if G_QkZmi )   if VWzypZ1zDcOL2 )   if ( GNG7Cd8J8E3v02Pjb6 
      if ( bp )   hGCEk $;






}
float `